cmake_minimum_required(VERSION 3.14)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(17 letterCombinations17.cpp letterCombinations17.h myleetcode.h myleetcode.cpp)
add_executable(55_45 jumpGame55_45.cpp jumpGame55_45.h myleetcode.h myleetcode.cpp)
add_executable(74_240 searchMatrix74_240.cpp searchMatrix74_240.h myleetcode.h myleetcode.cpp)
add_executable(79 wordSearch79.cpp wordSearch79.h myleetcode.h myleetcode.cpp)
add_executable(139 wordBreak139.cpp wordBreak139.h myleetcode.h myleetcode.cpp)
add_executable(141_142 cycleList141_142.cpp cycleList141_142.h myleetcode.h myleetcode.cpp)
add_executable(206_92 reverseList206_92.cpp reverseList206_92.h myleetcode.h myleetcode.cpp)